# libpoc

./: .gitignore  BEHAVIOR.md  CLAUDE.md  LICENSE  Makefile.am  README.md  configure.ac  libpoc.pc.in
.github/workflows/: ci.yml  release.yml
debian/: changelog  control  copyright  libpoc-dev.install  libpoc0.install  rules
examples/: Makefile.am  linenoise.c  linenoise.h  poc_cli.c  poc_server  poc_server.c  poc_server.conf.ini
include/: Makefile.am
include/libpoc/: poc.h  poc_proto.h  poc_server.h  version.h
src/: Makefile.am  poc_codec.c  poc_codec.h  poc_crypto.c  poc_ctx.c  poc_encrypt.c  poc_events.h  poc_fec.c  poc_gps.c  poc_internal.h  poc_jitter.c  poc_jitter.h  poc_msg_build.c  poc_msg_parse.c  poc_ring.h  poc_server_ctx.c  poc_server_internal.h  poc_tcp.c  poc_udp.c  poc_util.c
tests/: Makefile.am  test_codec.c  test_codec_wav  test_codec_wav.c  test_crypto.c  test_encrypt.c  test_fec.c  test_gps.c  test_integration  test_integration.c  test_jitter.c  test_main.c  test_msg_build.c  test_msg_parse.c  test_ring.c  test_tcp_frame.c  test_util.c
